--- a/tasks/templates/test.html
+++ b/tasks/templates/test.html
@@ -22,7 +22,7 @@
         <!--Dismiss all button-->
         <div class="float-end p-2" id="dismiss-notifications">
             <button type="submit" id="remove-notification" name="delete" value="delete-all" class="btn"
-                    data-bs-dismiss="alert" data-bs-target=".all-notifications" aria-label="Close">
+                    data-bs-dismiss="alert" data-bs-target=".all-notifications" aria-label="Close" style="display:none">
           <span class="bi bi-bell p-1">
             Dismiss all
           </span>
@@ -119,6 +119,9 @@
 
     <!--Popup Window testing-->
     <div id="popupContainer">
+        <div id="closePopup">
+            
+        </div>
     </div>
 
     <!--Other testing-->
