--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -107,7 +107,7 @@
 
 						<!-- Text Comment tab -->
 						<div class="tab-pane fade" id="text-pill" role="tabpanel" aria-labelledby="text-pill-tab">
-                            <button class="btn-primary p-2" id="addCommentBtn" onclick="addComment()" style="width: 100%">+Add Note</button>
+                            <button class="btn-primary p-2" id="addCommentBtn" onclick="addComment()" style="width: 100%;" disabled>+Add Note</button>
                             <div class="input-group mb-3 p-2" id="inputText" style="display: none; margin-bottom: 10px">
                                 <textarea id="textArea" type="text" class="form-control" style="width: 100%; padding: 0; border-radius: 15px" placeholder="Add your text comment here..."></textarea>
                                 <div style="text-align: right;">
