--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -379,7 +379,6 @@ textarea:focus {
   position: absolute;
   margin-top: -50px;
   width: 99%;
-  height: 100%;
   background-color: #fff;
   color: #000;
   border-radius: 10px;
@@ -388,6 +387,7 @@ textarea:focus {
   padding: 30px;
   margin-bottom: 10px;
   overflow-y: auto;
+  height: calc(100vh - 100px);
 }
 
 .button-container {
@@ -402,4 +402,12 @@ textarea:focus {
     position: absolute;
     top: 0.5rem;
     right: 0.5rem;
+}
+
+.saveBtn{
+    width: 50%;
+}
+.card-footer{
+    display: flex;
+    justify-content: flex-end;
 }
