Update share-file popup style

--- a/static/css/filelist.css
+++ b/static/css/filelist.css
@@ -34,7 +34,7 @@
     gap: 10px;
     padding: 20px;
     border: 10px;
-    flex-direction: row;
+    flex-direction: column;
     height: 880px;
     overflow-y: auto;
     &::-webkit-scrollbar {
