--- a/static/css/filelist.css
+++ b/static/css/filelist.css
@@ -28,14 +28,14 @@
 
 }
 
-.list-group{
+.list-group-file{
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
     padding: 20px;
     border: 10px;
-    flex-direction: column;
-    height: 880px;
+    min-height: 250px;
+    max-height: 880px;
     overflow-y: auto;
     &::-webkit-scrollbar {
         background-color: transparent;
