--- a/static/css/share_file_list.css
+++ b/static/css/share_file_list.css
@@ -1,6 +1,7 @@
 #share-to-me .list-group {
     flex-direction: row;
-    height: 1000px;
+    min-height: 250px;
+    max-height: 1000px;
     overflow-y: auto;
     &::-webkit-scrollbar {
         background-color: transparent;
