--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -183,7 +183,7 @@
         <div class="offcanvas offcanvas-end" tabindex="-1" id="sharePDFPopup{{ upload.id }}"
              aria-labelledby="sharePDFPopup{{ upload.id }}">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title" style="background: whitesmoke; color: black">Share PDF</h5>
+                <h5 class="offcanvas-title share-offcanvas-label">Share PDF</h5>
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
             </div>
