--- a/tasks/templates/team_detail.html
+++ b/tasks/templates/team_detail.html
@@ -17,7 +17,7 @@
             <div class="p-3 pt-2 border rounded shading">
                 <div class="row d-flex align-items-center justify-content-between">
                     <div class="col-2">
-                        <a href="{% url 'team_list' %}" class="btn btn-sm team-text text-nowrap btn-outline-primary"><i
+                        <a href="{% url 'team_list' %}" id="teamBack" class="btn btn-sm team-text text-nowrap btn-outline-primary"><i
                                 class="bi bi-arrow-left backFont"></i>Back</a>
 
                     </div>
